fix overflow not working

--- a/playgrounds/geoportal-playground/src/app/components/layers/tabs.css
+++ b/playgrounds/geoportal-playground/src/app/components/layers/tabs.css
@@ -6,4 +6,5 @@
 
 .ant-tabs {
   height: 100%;
+  overflow: auto;
 }
